# library

backend/: .env.example  .gitignore  README.md  alembic.ini  init_db.py  main.py  pyproject.toml
backend/app/: celery_app.py  tasks.py
backend/app/api/: auth.py  bookings.py  books.py  notifications.py
backend/app/core/: auth.py  config.py  database.py  security.py  session.py
backend/app/models/: __init__.py  book.py  booking.py  booking_point.py  notification.py  user.py
backend/app/schemas/: __init__.py  auth.py  book.py  booking.py  booking_point.py  notification.py  user.py
backend/app/services/: __init__.py  auth_service.py  book_service.py  booking_service.py  notification_service.py
backend/app/utils/: __init__.py  image_processing.py  validators.py
backend/migrations/: env.py
backend/migrations/versions/: 0f53a6e4e22f_remove_isbn_field.py  47a281ed16a2_init_db.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: BookCard.css  BookCard.js  BookingModal.css  BookingModal.js  Header.css  Header.js
frontend/src/config/: axios.js
frontend/src/contexts/: AuthContext.js  BookContext.js  BookingContext.js
frontend/src/pages/: AddBook.css  AddBook.js  Auth.css  BookDetails.css  Bookings.css  Bookings.js  Home.css  Home.js  Login.js  MyShelf.css  MyShelf.js  Profile.css  Profile.js  Register.js
frontend/src/utils/: bookUtils.js
